resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyu-nginx-service
spec:
  type: NodePort
  selector:
    app: hyu-nginx-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
